--- a/views/about.pug
+++ b/views/about.pug
@@ -1,47 +1,66 @@
 extends layout.pug
 
-block content 
+block content
   nav.grid-container.portfolio-breadcrumb
     a(href='/') ← Back
   article.grid-container.portfolio-intro.portfolio-project
     .grid-x
       .cell.small-6.medium-9.large-9
 
-        //- Add your name.
-        h1 Name
+        h1 Julien Leguey
 
-        //- Feel free personalize the title below
         p.lead.text-light
-          | Full Stack JavaScript Developer.
+          | Full Stack JavaScript Developer
 
-        //- Replace the boilerplate below with your Elevator pitch below.
         .portfolio-bio
           p
-            | This is my elevator pitch. It is the elevator pitch to end all elevator pitches. Your mind is blown. Your mortal brain can scarcely process how well my prior experience maps to your open dev position. 
-            | This is my elevator pitch. It is the elevator pitch to end all elevator pitches. Your mind is blown. Your mortal brain can scarcely process how well my prior experience maps to your open dev position.
-            | This is my elevator pitch. It is the elevator pitch to end all elevator pitches. Your mind is blown. Your mortal brain can scarcely process how well my prior experience maps to your open dev position.
+            | I'm a fullstack Javascript developer in training.
+          p
+            | I'm looking for any kind of job related to Javascript. I can work locally or remotely. Currently based in Paris, I can travel to work you with you.
+            | I speak both French and English fluently and my mandarin skills are not so bad either!
+          h3 Background
+          p
+            | I used to work for hedge funds companies while I was in France and to teach French when I was in Taiwan (2 years).
+            | I have a master degree in Finance and another one in teaching French as a Foreign Language.
+            | I am now back in France and studying JavaScript at Treehouse.
+          h3 Random accomplishments & facts about myself
+          p
+            | I like challenges and solving problems. I also like to travel and to meet people.
+          p
+            | From 2015 to 2016, I co-created a French Grammar app as I couldn't find any good enough to recommend to my students. I didn't write the code for the app, but I was in charge of the concept and I wrote all the content (241 lessons and 700 exercises to describe exhaustively the French Grammar).
+            | The app's name is "Dr French" and is available in both the Play Store and the App Store.
+          p
+            | I studied mandarin when I was living in Taiwan and I keep doing language exchanges with Taiwanese friends in Paris to maintain my Mandarin skills.
+          p
+            | In 2016, I started a 15 months cycle trip across Europe and Asia, mostly wild camping and figuring the next step on the way.
+          p
+            | I like DIY projects, like fixing locks, bicycles, and building furniture.
+            | I also enjoy cooking sushis and being creative with the vegetarian alternatives to fish.
+            | I read a lot of novel and comic books.
+            | My cat's name is Schrödinger. She doesn't like boxes.
       .cell.portfolio-meta.small-6.medium-2.large-3
         h6 Skills
 
-        //- Replace the text in the li tags below with your own skills.  At this point, you should be able to list at least ten skills.
         ul
           li Express
-          li Other cool stuff
-          li Listing my skills
-          li Etc.
-          li Etc. 
-          li Etc.
+          li JavaScript
+          li jQuery
+          li HTML
+          li CSS
+          li AJAX
+          li Node.js
+          li npm
+          li GitHub
+          li API
+
         h6 Contact Info
 
-        //- Add your own contact info
         ul
-          li 555-555-1234
-          li email@email.com
+          li +33 6 20 01 66 36
+          li julien.leguey@gmail.com
 
-        //- Add URLs to the hrefs below to link to your social media accounts.
-        a.button.expanded(href='') LinkedIn
-        a.button.expanded(href='') GitHub
-        a.button.expanded(href='') Twitter
+        a.button.expanded(href='https://www.linkedin.com/in/julien-leguey-a42885156') LinkedIn
+        a.button.expanded(href='https://github.com/Julienleguey') GitHub
+        a.button.expanded(href='https://twitter.com/Julien_Leguey') Twitter
   nav.grid-container.portfolio-breadcrumb
     a(href='/') ← Back
-  
