--- a/views/index.pug
+++ b/views/index.pug
@@ -4,29 +4,16 @@ block content
   article.grid-container.portfolio-intro
     div
 
-      //- Add a title or heading like My Portfolio, or Hey, Potential Employers, or Let's make the web great together!
       h1 My Portfolio
 
-      //- Add a description for your portfolio, what this project is, it's purpose, what it's suppossed to accomplish, etc.
       p.lead.text-light
-        | Portfolio Description
+        | Have a look at the projects I did while studying at Treehouse. It's a work in progress. More should be added in a near future.
   article.grid-container.portfolio-index
 
-    .grid-x.grid-margin-x.small-up-2.medium-up-2.large-up-3
-
-      //- Use the Pug `each` iterator to create a projet img, title and link in the markup for each of the projects you are showcasing.
-
-      //- Use a combination of interpolation and template literals as needed to dynamically generate the the routes in the href, as well as the img's src and the projects title.
-
-      //- Here's what the Pug for each project example should look like.
-
-      //.cell
-        //a(href='#')
-          //img.thumbnail(src='https://placehold.it/550x550')
-          //h5 Title
+    .grid-x.grid-margin-x.small-up-1.medium-up-2.large-up-3
 
       each proj in projs
         .cell
           a(href=`/project/${proj.proj_id}`)
-            img.thumbnail(src=`../images/project${proj.proj_id+1}_1.png`)
+            img.project-images.thumbnail(src=`../images/project${proj.proj_id+1}_0.png`)
             h5= proj.proj_name
