--- a/views/about.pug
+++ b/views/about.pug
@@ -16,27 +16,27 @@ block content
           p
             | I'm a fullstack Javascript developer in training.
           p
-            | I'm looking for any kind of job related to Javascript. I can work locally or remotely. Currently based in Paris, I can travel to work you with you.
-            | I speak both French and English fluently and my mandarin skills are not so bad either!
+            | I'm looking for any kind of job related to Javascript. I can work locally or remotely. Currently based in Paris, I can travel to work with you.
+            | I speak both French and English fluently and my Mandarin skills are not so bad either!
           h3 Background
           p
-            | I used to work for hedge funds companies while I was in France and to teach French when I was in Taiwan (2 years).
-            | I have a master degree in Finance and another one in teaching French as a Foreign Language.
+            | I used to work for hedge fund companies while I was in France and I taught French when I was in Taiwan (for 2 years).
+            | I have a master's degree in Finance and another one in teaching French as a Foreign Language.
             | I am now back in France and studying JavaScript at Treehouse.
           h3 Random accomplishments & facts about myself
           p
             | I like challenges and solving problems. I also like to travel and to meet people.
           p
-            | From 2015 to 2016, I co-created a French Grammar app as I couldn't find any good enough to recommend to my students. I didn't write the code for the app, but I was in charge of the concept and I wrote all the content (241 lessons and 700 exercises to describe exhaustively the French Grammar).
+            | From 2015 to 2016, I co-created a French Grammar app as I couldn't find any app good enough to recommend to my students. I didn't write the code for the app, but I was in charge of the concept and I wrote all the content (241 lessons and 700 exercises to exhaustively describe French Grammar).
             | The app's name is "Dr French" and is available in both the Play Store and the App Store.
           p
-            | I studied mandarin when I was living in Taiwan and I keep doing language exchanges with Taiwanese friends in Paris to maintain my Mandarin skills.
+            | I studied Mandarin when I was living in Taiwan and I keep doing language exchanges with Taiwanese friends in Paris to maintain my Mandarin skills.
           p
-            | In 2016, I started a 15 months cycle trip across Europe and Asia, mostly wild camping and figuring the next step on the way.
+            | In 2016, I started a 15-month cycle trip across Europe and Asia, mostly wild camping and figuring the next step on the way.
           p
             | I like DIY projects, like fixing locks, bicycles, and building furniture.
-            | I also enjoy cooking sushis and being creative with the vegetarian alternatives to fish.
-            | I read a lot of novel and comic books.
+            | I also enjoy cooking sushi and being creative with the vegetarian alternatives to fish.
+            | I read a lot of novels and comic books.
             | My cat's name is Schrödinger. She doesn't like boxes.
       .cell.portfolio-meta.small-6.medium-2.large-3
         h6 Skills
@@ -59,8 +59,8 @@ block content
           li +33 6 20 01 66 36
           li julien.leguey@gmail.com
 
-        a.button.expanded(href='https://www.linkedin.com/in/julien-leguey-a42885156') LinkedIn
-        a.button.expanded(href='https://github.com/Julienleguey') GitHub
-        a.button.expanded(href='https://twitter.com/Julien_Leguey') Twitter
+        a.button.expanded(href='https://www.linkedin.com/in/julien-leguey-a42885156' target="_blank") LinkedIn
+        a.button.expanded(href='https://github.com/Julienleguey' target="_blank") GitHub
+        a.button.expanded(href='https://twitter.com/Julien_Leguey' target="_blank") Twitter
   nav.grid-container.portfolio-breadcrumb
     a(href='/') ← Back
