--- a/views/index.pug
+++ b/views/index.pug
@@ -7,7 +7,7 @@ block content
       h1 My Portfolio
 
       p.lead.text-light
-        | Have a look at the projects I did while studying at Treehouse. It's a work in progress. More should be added in a near future.
+        | Have a look at the projects I did while studying at Treehouse. It's a work in progress. More should be added in the near future.
   article.grid-container.portfolio-index
 
     .grid-x.grid-margin-x.small-up-1.medium-up-2.large-up-3
